// Original file: src/modules/grpc/services/protos/user_service.proto


export interface CreateUserRequest {
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
}

export interface CreateUserRequest__Output {
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
}
